[package]
name = "blinkstick-rs"
version = "1.0.0"
authors = ["Seltiix <seltiix@outlook.com>"]
edition = "2018"
description = "A library for interacting with a BlinkStick device"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hidapi = "1.2.6"
rand = "0.8.4"

[dev-dependencies]
serial_test = "*"


