[package]
name = "blinkstick-rs"
version = "1.0.2"
authors = ["Seltiix <seltiix@outlook.com>"]
edition = "2018"
description = "A library for interacting with any BlinkStick device"
license = "MIT"
repository = "https://github.com/Seltiix/blinkstick-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hidapi = "1.2.6"
rand = "0.8.4"

[dev-dependencies]
serial_test = "0.5.1"


