[package]
name = "blinkstick-rs"
version = "0.3.2"
authors = ["Seltiix <seltiix@outlook.com>"]
edition = "2018"
description = "A library for interacting with any BlinkStick device"
license = "MIT"
repository = "https://github.com/Seltiix/blinkstick-rs"
exclude = ["src/main.rs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hidapi = "1.2.6"
rand = "0.8.4"


